# marginalis

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  flake.nix
.codex/: config.toml
.codex/rules/: commands.rules
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-gate.yml
crates/marginalis-adoc/: Cargo.toml
crates/marginalis-adoc/src/: lib.rs
crates/marginalis-application/: Cargo.toml
crates/marginalis-application/src/: lib.rs
crates/marginalis-asciidoc/: Cargo.toml
crates/marginalis-asciidoc/src/: lib.rs
crates/marginalis-auth-oidc/: Cargo.toml
crates/marginalis-auth-oidc/src/: lib.rs
crates/marginalis-domain/: Cargo.toml
crates/marginalis-domain/src/: lib.rs
crates/marginalis-files/: Cargo.toml
crates/marginalis-files/src/: lib.rs
crates/marginalis-integration-tests/: Cargo.toml
crates/marginalis-integration-tests/src/: lib.rs
crates/marginalis-integration-tests/tests/: oidc_rest_flow.rs
crates/marginalis-mcp/: Cargo.toml
crates/marginalis-mcp/src/: lib.rs
crates/marginalis-server/: Cargo.toml
crates/marginalis-server/src/: lib.rs
crates/marginalis-service/: Cargo.toml
crates/marginalis-service/src/: main.rs
crates/marginalis-service/tests/: cli.rs
crates/marginalis-sqlite/: Cargo.toml
crates/marginalis-sqlite/migrations/: 0001_initial.sql  0002_live_notes_index.sql  0003_note_search.sql  0004_mcp_access_tokens.sql  0005_mcp_oauth.sql  0006_delete_confirmations.sql  0007_mcp_token_timestamps.sql  0008_registration_policy.sql  0009_root_audit_log.sql  0010_delete_confirmation_note_cascade.sql  0011_delete_confirmation_reference_snapshot.sql  0012_note_metadata_filters.sql
crates/marginalis-sqlite/src/: lib.rs
crates/marginalis-store/: Cargo.toml
crates/marginalis-store/src/: lib.rs
crates/marginalis-web/: Cargo.toml
crates/marginalis-web/src/: lib.rs  main.rs
crates/notebook-adoc/: Cargo.toml
crates/notebook-adoc/src/: lib.rs
crates/notebook-store/: Cargo.toml
crates/notebook-store/src/: lib.rs
crates/notebook-web/: Cargo.toml
crates/notebook-web/src/: lib.rs
docs/: README.md  acceptance.md  architecture.md  development.md  interviews.md  mcp.md  nixos.md  openapi.json  release.md  requirements.md  rest-api.md  roadmap.md
issues/: 001-adocweave-dependency-and-contract.md  002-note-profile-and-metadata.md  003-note-references-and-resolver.md  004-safe-rendering-and-presentation.md  005-projections-and-rebuild.md  006-browser-preview.md  007-integration-testing-and-release.md  008-asciidoc-library-adaptation-boundary.md  009-oidc-provider-registration.md  010-nixos-module-and-release-packaging.md  011-architecture-rebaseline.md  012-mcp-fuzzy-search-index.md  013-root-administration-and-approval.md  014-rest-notes-search-and-mcp.md  015-api-first-architecture-rebaseline.md  016-product-contract-reconciliation.md  017-architecture-boundary-rebaseline-v2.md  018-api-contract-and-openapi.md  019-web-security-and-admin-boundary.md  020-data-format-and-maintenance-lifecycle.md  021-test-architecture-and-release-gates.md  022-v0.1.0-rc.1-release-acceptance.md  023-deletion-transaction-and-confirmation-integrity.md  024-write-recovery-and-concurrency.md  025-acl-and-metadata-invariants.md  026-oidc-login-binding-and-runtime-limits.md  027-search-reference-and-rendering-projections.md  028-contract-and-maintenance-reconciliation.md  029-adocweave-v0.4.0-adoption.md  029-adocweave-v0.5.0-migration.md  029-adocweave-v0.6.1-migration.md  030-end-to-end-test-automation-readiness.md  031-postgresql-storage-backend-feasibility.md  032-mcp-authoring-profile-and-diagnostics.md  033-repository-documentation-asciidoc-migration.md  034-graph-visualization-web-ui.md  035-v0.2.0-rc.1-release-acceptance.md  036-v0.2.0-release-acceptance.md  README.md
issues/upstream/: 001-resolved-url-policy-and-wasm-parity.md  002-external-link-attributes.md  003-resolved-reference-display.md  004-reference-resolution-notices.md  005-source-language-policy.md  006-math-projection-api.md  007-stem-language-profile.md  008-resource-profile.md  009-public-document-attribute-occurrences.md  README.md
nix/: module.nix
