[workspace]
members = ["crates/notebook-adoc", "crates/notebook-store", "crates/notebook-web"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
adocweave = { git = "https://github.com/KeishiS/AdocWeave.git", rev = "f4ef9f995b909833b43e7e33d686c4de5319165b", package = "adocweave" }
adocweave-wasm = { git = "https://github.com/KeishiS/AdocWeave.git", rev = "f4ef9f995b909833b43e7e33d686c4de5319165b", package = "adocweave-wasm" }
unicode-normalization = "0.1.25"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2.5.8"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "tokio"] }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest"] }
serde = { version = "1.0.219", features = ["derive"] }
tower = { version = "0.5.2", features = ["util"] }
