[workspace]
members = [
    "crates/marginalis-asciidoc",
    "crates/marginalis-application",
    "crates/marginalis-auth-oidc",
    "crates/marginalis-domain",
    "crates/marginalis-files",
    "crates/marginalis-server",
    "crates/marginalis-sqlite",
    "crates/marginalis-web",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
adocweave = { git = "https://github.com/KeishiS/AdocWeave.git", rev = "f4ef9f995b909833b43e7e33d686c4de5319165b", package = "adocweave" }
adocweave-wasm = { git = "https://github.com/KeishiS/AdocWeave.git", rev = "f4ef9f995b909833b43e7e33d686c4de5319165b", package = "adocweave-wasm" }
argon2 = "0.5.3"
unicode-normalization = "0.1.25"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.9"
time = { version = "0.3.54", features = ["formatting", "macros", "parsing"] }
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tower = { version = "0.5.2", features = ["util"] }
