[package]
name = "marginalis-asciidoc"
version = "0.2.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
adocweave.workspace = true
adocweave-wasm.workspace = true
marginalis-domain = { path = "../marginalis-domain" }
unicode-normalization.workspace = true
