[package]
name = "marginalis-auth-oidc"
version = "0.1.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
openidconnect.workspace = true
tracing.workspace = true
url.workspace = true
