[package]
name = "marginalis-files"
version = "0.1.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
sha2.workspace = true

[dev-dependencies]
marginalis-sqlite = { path = "../marginalis-sqlite" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
