[package]
name = "marginalis-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
