[package]
name = "marginalis-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
base64.workspace = true
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
rand.workspace = true
time.workspace = true
url.workspace = true
uuid.workspace = true
