[package]
name = "marginalis-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
base64.workspace = true
marginalis-application = { path = "../marginalis-application" }
marginalis-asciidoc = { path = "../marginalis-asciidoc" }
marginalis-auth-oidc = { path = "../marginalis-auth-oidc" }
marginalis-domain = { path = "../marginalis-domain" }
marginalis-files = { path = "../marginalis-files" }
marginalis-mcp = { path = "../marginalis-mcp" }
marginalis-sqlite = { path = "../marginalis-sqlite" }
rand.workspace = true
time.workspace = true
url.workspace = true
uuid.workspace = true
