[package]
name = "marginalis-sqlite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
