[package]
name = "marginalis-sqlite"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
argon2.workspace = true
sqlx.workspace = true
serde_json.workspace = true
sha2.workspace = true
rand.workspace = true
tokio.workspace = true

[dev-dependencies]
