[package]
name = "marginalis-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
axum.workspace = true
marginalis-store = { path = "../marginalis-store" }
openidconnect.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tower.workspace = true
