[package]
name = "marginalis-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
axum.workspace = true
marginalis-application = { path = "../marginalis-application" }
marginalis-asciidoc = { path = "../marginalis-asciidoc" }
marginalis-auth-oidc = { path = "../marginalis-auth-oidc" }
marginalis-domain = { path = "../marginalis-domain" }
marginalis-files = { path = "../marginalis-files" }
marginalis-server = { path = "../marginalis-server" }
marginalis-sqlite = { path = "../marginalis-sqlite" }
openidconnect.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
