[package]
name = "marginalis-web"
version = "0.1.0-rc.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true, features = [ "form" ] }
marginalis-application = { path = "../marginalis-application" }
marginalis-domain = { path = "../marginalis-domain" }
marginalis-mcp = { path = "../marginalis-mcp" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
marginalis-auth-oidc = { path = "../marginalis-auth-oidc" }
marginalis-files = { path = "../marginalis-files" }
marginalis-server = { path = "../marginalis-server" }
marginalis-sqlite = { path = "../marginalis-sqlite" }
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
