[package]
name = "notebook-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
adocweave.workspace = true
notebook-adoc = { path = "../notebook-adoc" }
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
