[package]
name = "notebook-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
adocweave.workspace = true
base64.workspace = true
notebook-adoc = { path = "../notebook-adoc" }
rand.workspace = true
sqlx.workspace = true
sha2.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
