[package]
name = "notebook-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
axum.workspace = true
notebook-store = { path = "../notebook-store" }
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
